--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav id="navbar">
-        <header>Documentacion Phyton</header>
+        <header>Documentacion Phyton <img src="https://s3.dualstack.us-east-2.amazonaws.com/pythondotorg-assets/media/files/python-logo-only.svg" alt=""></header>
         <ul>
             <li><a class="link_nav" href="#Novedades">Novedades Phyton 3.14</a></li>
             <li><a class="link_nav" href="#Funciones_Nuevas">Funciones Nuevas</a></li>
