--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <nav id="navbar">
         <header class="titulo">Documentacion Phyton <img src="https://s3.dualstack.us-east-2.amazonaws.com/pythondotorg-assets/media/files/python-logo-only.svg" alt=""></header>
         <ul>
-            <li><a class="link_nav" href="#Novedades">Novedades Phyton 3.14</a></li>
-            <li><a class="link_nav" href="#Funciones_Nuevas">Funciones Nuevas</a></li>
-            <li><a class="link_nav" href="#Cambios_en_Phyton">Cambios en Phyton</a></li>
-            <li><a class="link_nav" href="#Modulos_Nuevos">Modulos Nuevos</a></li>
-            <li><a class="link_nav" href="#Modulos_Mejorados">Modulos Mejorados</a></li>
-            <li><a class="link_nav" href="#Optimizaciones">Optimizaciones</a></li>
-            <li><a class="link_nav" href="#Obsoleto">Obsoleto</a></li>
-            <li><a class="link_nav" href="#Eliminado">Eliminado</a></li>
+            <li><a class="nav-link" href="#Novedades">Novedades Phyton 3.14</a></li>
+            <li><a class="nav-link" href="#Funciones_Nuevas">Funciones Nuevas</a></li>
+            <li><a class="nav-link" href="#Cambios_en_Phyton">Cambios en Phyton</a></li>
+            <li><a class="nav-link" href="#Modulos_Nuevos">Modulos Nuevos</a></li>
+            <li><a class="nav-link" href="#Modulos_Mejorados">Modulos Mejorados</a></li>
+            <li><a class="nav-link" href="#Optimizaciones">Optimizaciones</a></li>
+            <li><a class="nav-link" href="#Obsoleto">Obsoleto</a></li>
+            <li><a class="nav-link" href="#Eliminado">Eliminado</a></li>
         </ul>
     </nav>
     <main id="main-doc">
