--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav id="navbar">
         <header class="titulo">Documentacion Phyton <img src="https://s3.dualstack.us-east-2.amazonaws.com/pythondotorg-assets/media/files/python-logo-only.svg" alt=""></header>
         <ul>
-            <li><a class="nav-link" href="#Novedades">Novedades Phyton 3.14</a></li>
+            <li><a class="nav-link" href="#Novedades">Novedades</a></li>
             <li><a class="nav-link" href="#Funciones_Nuevas">Funciones Nuevas</a></li>
             <li><a class="nav-link" href="#Cambios_en_Phyton">Cambios en Phyton</a></li>
             <li><a class="nav-link" href="#Modulos_Nuevos">Modulos Nuevos</a></li>
